--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -13,13 +13,13 @@
       %th
     - @articles.each do |article|
       %tr
-        %td= article.title
+        %td= article.title.length > 30 ? article.title[0, 30]+'...' : article.title
         %td= (article.content.length > 60) ? article.content[0..60] + "..." : article.content
         %td= article.article_type
         %td= article.user.username if article.user
-        %td= link_to t('global.show'), article
-        %td= link_to t('global.edit'), edit_article_path(article)
-        %td= link_to t('global.delete'), article, :confirm => t('site.are_you_sure'), :method => :delete
+        %td= link_to image_tag('view.png', :alt=>t('global.show')), article
+        %td= link_to image_tag('edit.png', :alt=>t('global.edit')), edit_article_path(article)
+        %td= link_to image_tag('delete.png', :alt=>t('global.delete')), article, :confirm => t('site.are_you_sure'), :method => :delete
   %br/
 
 - else
@@ -29,3 +29,4 @@
         %td= l article.created_at, :format => :short
         %td= link_to article.title, article
       
+= will_paginate @articles
