--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 = render 'users/head'
-#mainframe
-  = render 'account/trades'
-#right
-  .bordershape
-    = render 'account/user'
+
+.solidshape
+  = render 'account/user'
+
+= render 'account/trades'
