--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -367,11 +367,20 @@ tfoot th, tfoot td {
   text-decoration: none;
 }
 
+/* line 315, ../../../app/stylesheets/site.scss */
+.solidshape {
+  padding: 3px 5px;
+  margin: 10px 10px 0 0;
+  border: 1px solid #92cdec;
+  -moz-border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 3px;
+}
+
 /* ---------------------------------------- index page customer service ------------------------------------------ */
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 320, ../../../app/stylesheets/site.scss */
+/* line 327, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px;
   border: 1px solid #92cdec;
@@ -384,14 +393,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 326, ../../../app/stylesheets/site.scss */
+/* line 333, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 327, ../../../app/stylesheets/site.scss */
+/* line 334, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -399,14 +408,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 328, ../../../app/stylesheets/site.scss */
+/* line 335, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 329, ../../../app/stylesheets/site.scss */
+/* line 336, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -415,7 +424,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 330, ../../../app/stylesheets/site.scss */
+/* line 337, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -423,7 +432,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 331, ../../../app/stylesheets/site.scss */
+/* line 338, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -433,7 +442,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 332, ../../../app/stylesheets/site.scss */
+/* line 339, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
