--- a/app/views/account/_trades.html.haml
+++ b/app/views/account/_trades.html.haml
@@ -1,3 +1,9 @@
+.bordershape
+  = image_tag('charge.png')
+  = '-' + t('trade.charge')
+  \|
+  = image_tag('recyling.png')
+  = '-' + t('trade.recyling_point')
 %table
   %caption=# t 'account.charge'
   %thead
