--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,5 +1,6 @@
 - semantic_form_for @article do |f| 
   - f.inputs do
     = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
+    = f.input :article_type, :collection => ['wiki', 'rule'], :input_html => {:class => "validate[required]"}
     = f.input :content, :as => :text, :input_html => { :class => 'mceEditor' }
     = f.commit_button
