--- a/public/stylesheets/coin-slider-styles.css
+++ b/public/stylesheets/coin-slider-styles.css
@@ -1,10 +1,9 @@
-/*
-	Coin Slider jQuery plugin CSS styles
+/* Coin Slider jQuery plugin CSS styles
 	http://workshop.rs/projects/coin-slider
 */
 
 
-.coin-slider { overflow: hidden; zoom: 1; position: relative; }
+.coin-slider { overflow: hidden; zoom: 1; position: relative; float:center; }
 .coin-slider a{ text-decoration: none; outline: none; border: none; }
 
 .cs-buttons { font-size: 0px; padding: 10px; float: left; }
