--- a/public/stylesheets/jquery.notice.css
+++ b/public/stylesheets/jquery.notice.css
@@ -1,7 +1,7 @@
 .notice-wrap {
 	position: fixed;
 	top: 20px;
-	right: 20px;
+	right: 200px;
 	/*width: 250px;*/
 	width: 350px;
 	z-index: 9999;
@@ -14,14 +14,15 @@
 .notice-item {
 	/*height: 60px;*/
   height: 30px;
-	background: #333;
+	/*background: #333;*/
+  background: #0066cc;
 	-moz-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	color: #eee;
 	padding: 6px 6px 0 6px;
 	font-family: lucida Grande;
 	font-size: 14px;
-	border: 2px solid #999;
+	/*border: 2px solid #999;*/
 	display: block;
 	position: relative;
 	margin: 0 0 12px 0;
