update display style

--- a/app/views/account/_tradelogs.html.haml
+++ b/app/views/account/_tradelogs.html.haml
@@ -1,3 +1,4 @@
+= will_paginate @trades
 %table
   %caption
   %thead
@@ -24,5 +25,4 @@
       %td= t.local_type
       %td= t.description
       %td= l t.created_at, :format => :long
-
 = will_paginate @trades
