--- a/app/views/account/index.html.haml
+++ b/app/views/account/index.html.haml
@@ -1,7 +1,6 @@
 = render 'users/head'
 
-#mainframe
-  = render 'trades'
-#right
-  .bordershape
-    = render 'user' unless @user.nil?
+.solidshape
+  = render 'user' unless @user.nil?
+
+= render 'trades'
