--- a/app/views/account/participant.html.haml
+++ b/app/views/account/participant.html.haml
@@ -1,7 +1,6 @@
 = render 'users/head'
 
-#mainframe
-  = render 'participants/parts'
-#right
-  .bordershape
-    = render 'user'
+.solidshape
+  = render 'user'
+
+= render 'participants/parts'
