--- a/app/views/account/small_cash.html.haml
+++ b/app/views/account/small_cash.html.haml
@@ -1,8 +1,7 @@
 = render 'users/head'
 
-#mainframe
-  = render 'tasks/tasks'
-#right
-  .bordershape
-    = render 'user'
+.solidshape
+  = render 'user'
+
+= render 'tasks/tasks'
 
