--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,6 +1,6 @@
 = render :partial => "devise/shared/links"
 %h2= t 'site.forgot_password'
-#roundshape
+.bordershape
   = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
     = devise_error_messages!
     %p
