--- a/app/views/account/task_log.haml
+++ b/app/views/account/task_log.haml
@@ -1,5 +1,8 @@
 = render 'users/head'
-= @user.username
+
+.solidshape
+  = render 'account/user'
+
 /
   = t('site.user_manage')
   - form_tag :controller => 'board', :action => 'search_user' do
