--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,18 +1,20 @@
 = render :partial => "devise/shared/links"
-%h2= t 'site.register' 
-#fieldset.formContainer
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-    = devise_error_messages!
-    .rowContainer
-      = label_tag t('site.login_name')
-      = f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20],custom[onlyLetterNumber]' }
-    .rowContainer
-      = label_tag t('page.email')
-      = f.text_field :email, { :class => 'validate[required],custom[email]' }
-    .rowContainer
-      = label_tag t('site.password')
-      = f.password_field :password, { :class => 'validate[required],minSize[6],maxSize[20]' }
-    .rowContainer
-      = label_tag t('site.password_confirmation')
-      = f.password_field :password_confirmation, { :class => 'validate[required,equals[user_password]],minSize[6],maxSize[20]' }
-    %p= f.submit t('site.register')
+/%h2= t 'site.register' 
+#wide
+  .bordershape
+    #fieldset.formContainer
+      = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+        = devise_error_messages!
+        .rowContainer
+          = label_tag t('site.login_name')
+          = f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20],custom[onlyLetterNumber]' }
+        .rowContainer
+          = label_tag t('page.email')
+          = f.text_field :email, { :class => 'validate[required],custom[email]' }
+        .rowContainer
+          = label_tag t('site.password')
+          = f.password_field :password, { :class => 'validate[required],minSize[6],maxSize[20]' }
+        .rowContainer
+          = label_tag t('site.password_confirmation')
+          = f.password_field :password_confirmation, { :class => 'validate[required,equals[user_password]],minSize[6],maxSize[20]' }
+        %p= f.submit t('site.register')
