--- a/app/views/devise/unlocks/new.html.haml
+++ b/app/views/devise/unlocks/new.html.haml
@@ -1,9 +1,10 @@
 = render :partial => "devise/shared/links"
 %h2= t 'site.send_unlock'
-= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f|
-  = devise_error_messages!
-  %p
-    = f.label :email
-    %br/
-    = f.text_field :email, { :class => 'validate[required],custom[email]' }
-  %p= f.submit t('site.send_unlock')
+.bordershape
+  = form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f|
+    = devise_error_messages!
+    %p
+      = t 'page.email'
+      %br/
+      = f.text_field :email, { :class => 'validate[required],custom[email]' }
+    %p= f.submit t('site.send_unlock')
