--- a/app/views/participants/_parts.html.haml
+++ b/app/views/participants/_parts.html.haml
@@ -1,51 +1,53 @@
-%table
-  %caption= t 'participant.customer'
-  %thead
-    %tr
-      %th= t 'formtastic.labels.participant.part_type'
-      %th= t 'formtastic.labels.participant.part_id'
-      %th= t 'formtastic.labels.participant.status'
-      %th= t 'formtastic.labels.participant.active'
-      %th= t 'global.task'
-      %th= t 'global.created_at'
-      %th
-      %th
-      %th
-  - @participants.each do |participant|
-    %tr
-      %td= participant.part_type
-      %td= participant.part_id
-      %td= participant.status
-      %td= convert_yes_no(participant.active)
-      %td= participant.tasks.length
-      %td= l participant.created_at, :format => :short
-      %td= link_to image_tag('view.png'), participant
-      %td= link_to image_tag('edit.png'), edit_participant_path(participant)
-      %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
-= will_paginate @participants
+#equal-left
+  %table
+    %caption= t 'participant.customer'
+    %thead
+      %tr
+        %th= t 'formtastic.labels.participant.part_type'
+        %th= t 'formtastic.labels.participant.part_id'
+        %th= t 'formtastic.labels.participant.status'
+        %th= t 'formtastic.labels.participant.active'
+        %th= t 'global.task'
+        %th= t 'global.created_at'
+        %th
+        %th
+        %th
+    - @participants.each do |participant|
+      %tr
+        %td= participant.part_type
+        %td= participant.part_id
+        %td= participant.status
+        %td= convert_yes_no(participant.active)
+        %td= participant.tasks.length
+        %td= l participant.created_at, :format => :short
+        %td= link_to image_tag('view.png'), participant
+        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
+  = will_paginate @participants
 
-%table
-  %caption= t 'participant.shop'
-  %thead
-    %tr
-      %th= t 'formtastic.labels.participant.part_type'
-      %th= t 'formtastic.labels.participant.part_id'
-      %th= t 'formtastic.labels.participant.status'
-      %th= t 'formtastic.labels.participant.active'
-      %th= t 'global.task'
-      %th= t 'global.created_at'
-      %th
-      %th
-      %th
-  - @shops.each do |participant|
-    %tr
-      %td= participant.part_type
-      %td= participant.part_id
-      %td= participant.status
-      %td= convert_yes_no(participant.active)
-      %td= Task.where(:shop => participant.part_id).length
-      %td= l participant.created_at, :format => :short
-      %td= link_to image_tag('view.png'), participant
-      %td= link_to image_tag('edit.png'), edit_participant_path(participant)
-      %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
-= will_paginate @shops
+#equal-right
+  %table
+    %caption= t 'participant.shop'
+    %thead
+      %tr
+        %th= t 'formtastic.labels.participant.part_type'
+        %th= t 'formtastic.labels.participant.part_id'
+        %th= t 'formtastic.labels.participant.status'
+        %th= t 'formtastic.labels.participant.active'
+        %th= t 'global.task'
+        %th= t 'global.created_at'
+        %th
+        %th
+        %th
+    - @shops.each do |participant|
+      %tr
+        %td= participant.part_type
+        %td= participant.part_id
+        %td= participant.status
+        %td= convert_yes_no(participant.active)
+        %td= Task.where(:shop => participant.part_id).length
+        %td= l participant.created_at, :format => :short
+        %td= link_to image_tag('view.png'), participant
+        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
+  = will_paginate @shops
