--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -292,16 +292,17 @@ body.bp form.inline p {
   border: none;
   padding: 30px;
   width: 600px;
+  margin: 50px auto;
 }
 
-/* line 129, ../../../app/stylesheets/site.scss */
+/* line 130, ../../../app/stylesheets/site.scss */
 .formContainer h3 {
   margin: 0px;
   padding: 0px 0px 10px 0px;
   font-size: 135%;
 }
 
-/* line 135, ../../../app/stylesheets/site.scss */
+/* line 136, ../../../app/stylesheets/site.scss */
 .rowContainer {
   width: 100%;
   overflow: hidden;
@@ -309,7 +310,7 @@ body.bp form.inline p {
   height: 34px;
 }
 
-/* line 142, ../../../app/stylesheets/site.scss */
+/* line 143, ../../../app/stylesheets/site.scss */
 .rowContainer label {
   width: 140px;
   float: left;
@@ -317,12 +318,12 @@ body.bp form.inline p {
   font-weight: bold;
 }
 
-/* line 149, ../../../app/stylesheets/site.scss */
+/* line 150, ../../../app/stylesheets/site.scss */
 .rowContainer input[type="text"] {
   width: 200px;
 }
 
-/* line 153, ../../../app/stylesheets/site.scss */
+/* line 154, ../../../app/stylesheets/site.scss */
 .tooltipContainer {
   height: 16px;
   font-size: 11px;
@@ -334,7 +335,7 @@ body.bp form.inline p {
   padding: 0px 20px;
 }
 
-/* line 168, ../../../app/stylesheets/site.scss */
+/* line 169, ../../../app/stylesheets/site.scss */
 .error {
   color: #990000;
 }
@@ -343,7 +344,7 @@ body.bp form.inline p {
 	Cusco Sky table styles
 	written by Braulio Soncco http://www.buayacorp.com
 */
-/* line 181, ../../../app/stylesheets/site.scss */
+/* line 182, ../../../app/stylesheets/site.scss */
 table, th, td {
   /*border: 1px solid #D4E0EE;*/
   border-collapse: collapse;
@@ -351,19 +352,19 @@ table, th, td {
   color: #555;
 }
 
-/* line 188, ../../../app/stylesheets/site.scss */
+/* line 189, ../../../app/stylesheets/site.scss */
 caption {
   font-size: 150%;
   font-weight: bold;
   margin: 5px;
 }
 
-/* line 194, ../../../app/stylesheets/site.scss */
+/* line 195, ../../../app/stylesheets/site.scss */
 td, th {
   padding: 4px;
 }
 
-/* line 198, ../../../app/stylesheets/site.scss */
+/* line 199, ../../../app/stylesheets/site.scss */
 thead th {
   border-bottom: 1px solid #D4E0EE;
   text-align: left;
@@ -372,46 +373,46 @@ thead th {
   font-size: 100% !important;
 }
 
-/* line 206, ../../../app/stylesheets/site.scss */
+/* line 207, ../../../app/stylesheets/site.scss */
 tbody th {
   font-weight: bold;
 }
 
-/* line 210, ../../../app/stylesheets/site.scss */
+/* line 211, ../../../app/stylesheets/site.scss */
 tbody tr {
   background: #FCFDFE;
   border-bottom: 1px solid #D4E0EE;
 }
 
-/* line 215, ../../../app/stylesheets/site.scss */
+/* line 216, ../../../app/stylesheets/site.scss */
 tbody tr.odd {
   background: #F7F9FC;
 }
 
-/* line 217, ../../../app/stylesheets/site.scss */
+/* line 218, ../../../app/stylesheets/site.scss */
 table a:link {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 222, ../../../app/stylesheets/site.scss */
+/* line 223, ../../../app/stylesheets/site.scss */
 table a:visited {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 227, ../../../app/stylesheets/site.scss */
+/* line 228, ../../../app/stylesheets/site.scss */
 table a:hover {
   color: #718ABE;
   text-decoration: underline !important;
 }
 
-/* line 232, ../../../app/stylesheets/site.scss */
+/* line 233, ../../../app/stylesheets/site.scss */
 tfoot th, tfoot td {
   font-size: 85%;
 }
 
-/* line 237, ../../../app/stylesheets/site.scss */
+/* line 238, ../../../app/stylesheets/site.scss */
 .shadow1 {
   box-shadow: 5px 5px #818181;
   -webkit-box-shadow: 5px 5px #818181;
@@ -424,7 +425,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 249, ../../../app/stylesheets/site.scss */
+/* line 250, ../../../app/stylesheets/site.scss */
 .shadow {
   box-shadow: 7px 7px 8px #818181;
   -webkit-box-shadow: 7px 7px 8px #818181;
@@ -437,7 +438,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 260, ../../../app/stylesheets/site.scss */
+/* line 261, ../../../app/stylesheets/site.scss */
 #tearshape {
   background: #f1f2f3;
   padding: 3px 5px;
@@ -450,7 +451,7 @@ tfoot th, tfoot td {
   -webkit-border-bottom-right-radius: 9px;
 }
 
-/* line 271, ../../../app/stylesheets/site.scss */
+/* line 272, ../../../app/stylesheets/site.scss */
 #roundshape {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -462,7 +463,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 283, ../../../app/stylesheets/site.scss */
+/* line 284, ../../../app/stylesheets/site.scss */
 .round {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -471,14 +472,14 @@ tfoot th, tfoot td {
   -webkit-border-radius: 5px;
 }
 
-/* line 291, ../../../app/stylesheets/site.scss */
+/* line 292, ../../../app/stylesheets/site.scss */
 .curlycontainer {
   border: 1px solid #b8b8b8;
   margin-bottom: 1em;
   width: 300px;
 }
 
-/* line 297, ../../../app/stylesheets/site.scss */
+/* line 298, ../../../app/stylesheets/site.scss */
 .curlycontainer .innerdiv {
   background: transparent url(brcorner.gif) bottom right no-repeat;
   position: relative;
@@ -487,7 +488,7 @@ tfoot th, tfoot td {
   padding: 1px 4px 15px 5px;
 }
 
-/* line 305, ../../../app/stylesheets/site.scss */
+/* line 306, ../../../app/stylesheets/site.scss */
 .bordershape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -496,12 +497,12 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 312, ../../../app/stylesheets/site.scss */
+/* line 313, ../../../app/stylesheets/site.scss */
 .bordershape a {
   text-decoration: none;
 }
 
-/* line 315, ../../../app/stylesheets/site.scss */
+/* line 316, ../../../app/stylesheets/site.scss */
 .solidshape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -514,7 +515,7 @@ tfoot th, tfoot td {
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 327, ../../../app/stylesheets/site.scss */
+/* line 328, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px;
   border: 1px solid #92cdec;
@@ -527,14 +528,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 333, ../../../app/stylesheets/site.scss */
+/* line 334, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 334, ../../../app/stylesheets/site.scss */
+/* line 335, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -542,14 +543,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 335, ../../../app/stylesheets/site.scss */
+/* line 336, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 336, ../../../app/stylesheets/site.scss */
+/* line 337, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -558,7 +559,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 337, ../../../app/stylesheets/site.scss */
+/* line 338, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -566,7 +567,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 338, ../../../app/stylesheets/site.scss */
+/* line 339, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -576,7 +577,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 339, ../../../app/stylesheets/site.scss */
+/* line 340, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
